prod_snapshot_2015-09-24_1030/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>InStatus_In_Fulfillment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>InStatus In Fulfillment</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InStatus_Pending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>InStatus Pending</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InStatus_TimeIn__c</fullName>
        <label>InStatus TimeIn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InStatus_WaitingApproval__c</fullName>
        <defaultValue>0</defaultValue>
        <label>InStatus WaitingApproval</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InStatus_WaitingResource__c</fullName>
        <defaultValue>0</defaultValue>
        <label>InStatus WaitingResource</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment_Out_Stamp__c</fullName>
        <formula>IF( Live_Date__c &lt; Project__r.In_Fulfillment_Out_Stamp__c,Live_Date__c,Project__r.In_Fulfillment_Out_Stamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Fulfillment Out Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment_Stamp__c</fullName>
        <formula>Project__r.In_Fulfillment_Stamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Fulfillment Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_CancelDate__c</fullName>
        <label>Invoice Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_CancelFeePercent__c</fullName>
        <label>Cancellation Fee Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice_DayOfMonth__c</fullName>
        <formula>Day(Invoice_ServiceStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Anniversary Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_PriceVariable__c</fullName>
        <description>Stores pricing information while creating new OLI</description>
        <inlineHelpText>This field contains different pricing variables such as CPM for Email, cost per location for Maps and cost per hours for Web Creative Fees.</inlineHelpText>
        <label>Product Price Variable</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_ServiceEndDate__c</fullName>
        <label>Product End of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_ServiceStartDate__c</fullName>
        <label>Product Start of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Units__c</fullName>
        <formula>IF(NOT(ISBLANK(NumberOfHours__c)), NumberOfHours__c,  
   IF(NOT(ISBLANK(Email_Recipients_Qty__c)), Email_Recipients_Qty__c,
      IF(NOT(ISBLANK(NumberOfLocations__c)), NumberOfLocations__c,null
      )
   )
)</formula>
        <label>Invoice Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Schedule_Bill_Date__c</fullName>
        <label>Last Schedule Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_Edit__c</fullName>
        <formula>HYPERLINK(&quot;https://na10.salesforce.com/&quot; &amp; Id &amp; &quot;/e?retURL=%2F00OF0000004BI1F?pv1=&quot; &amp; $User.FirstName &amp; &quot;+&quot; &amp;  $User.LastName, &quot;JumpToEdit&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_View__c</fullName>
        <formula>HYPERLINK(&quot;https://na10.salesforce.com/&quot; &amp; Id, &quot;JumpToView&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <label>Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Live_Last_Set_DateTime__c</fullName>
        <label>Live Last Set DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Live_Last_Set_Person__c</fullName>
        <label>Live Last Set Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Last_Set_Prev_Val__c</fullName>
        <label>Live Last Set Prev Val</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Live_Last_Set_Value__c</fullName>
        <label>Live Last Set Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Live_Timer__c</fullName>
        <formula>IF( Opportunity.IsWon = True,IF(AND(NOT(ISNULL(Opportunity.Dig_On_B_Call_Date__c)),NOT(ISNULL( Live_Date__c ))), Live_Date__c  - Opportunity.Dig_On_B_Call_Date__c, if(Not(isnull(Live_Date__c)),Live_Date__c -  Opportunity.Closed_Won_Time_Stamp__c ,0)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live Timer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Partner_Name__c</fullName>
        <formula>Opportunity.Media_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Partner__c</fullName>
        <formula>Opportunity.Media_Partner_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meets_SLA__c</fullName>
        <description>If the Time In Fulfillment is Less than of equal to the number of SLA Days Attributed to the Product, Mark as 1 Otherwise mark as 0</description>
        <formula>if(   DaysInStatus_InFulfillment__c &gt; PricebookEntry.Product2.SLA_Bus_Days__c,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meets_SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mgmt_Fee_Percent__c</fullName>
        <description>The Finance and Operations Teams need a way for the Jumpstart Team to code PPC Management Fee when it is put in as a product.</description>
        <label>Mgmt Fee %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month_1_Charge__c</fullName>
        <formula>UnitPrice +  Setup_Fee_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 1 Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Email_1__c</fullName>
        <label>Notify Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notify_Email_2__c</fullName>
        <label>Notify Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notify_Email_3__c</fullName>
        <label>Notify Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NumberOfHours__c</fullName>
        <label>Number Of Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfLocations__c</fullName>
        <label>Number Of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnBoard_Date__c</fullName>
        <formula>DATEVALUE(Opportunity.Dig_On_B_Call_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnBoard Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Acct_Id__c</fullName>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Acct Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Affl_Sales_Rep__c</fullName>
        <formula>Opportunity.Sales_Rep__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Affl Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Dig_Acct_Man_Id__c</fullName>
        <formula>Opportunity.Dig_Account_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Dig Acct Man Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Last_Sched_Bill_Date__c</fullName>
        <formula>Opportunity.Last_Schedule_Bill_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Last Sched Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Name__c</fullName>
        <formula>Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Id__c</fullName>
        <formula>Opportunity.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opp Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Rep_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_Product_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Sales_Rep_Id__c</fullName>
        <formula>Opportunity.Sales_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Sales Rep Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Form__c</fullName>
        <description>Order form link shows PPC Order Form for now and potentially be applied for any other products that requires a link</description>
        <formula>IF(AND( 
CONTAINS(PricebookEntry.Product2.ProductCode, &apos;SML-PPC Budgeted&apos;), 
ISPICKVAL(Opportunity.StageName, &apos;Closed Won&apos;), 
Opportunity.CloseDate &gt; DATE(2013,09,25)), 
HYPERLINK(&apos;apex/PPCOrderForm?OpportunityLineItemId=&apos; + Id, &apos;PPC Order Form&apos;, &apos;_parent&apos;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_P_C_I__c</fullName>
        <label>P.P.C.I.</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Processing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Processing</label>
        <referenceTo>Payment_Processing__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periods2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Periods/Cycles</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Print_Product__c</fullName>
        <formula>IF(PricebookEntry.Product2.Print_Product__c  = True,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>IF(CONTAINS( Product_Name__c ,&quot;SEO&quot;),&quot;SEO&quot;,IF(CONTAINS( Product_Name__c ,&quot;Web&quot;),&quot;WEB&quot;,IF(CONTAINS( Product_Name__c ,&quot;Page&quot;),&quot;WEB&quot;,IF(CONTAINS( Product_Name__c ,&quot;Social&quot;),&quot;SOC&quot;,IF(CONTAINS( Product_Name__c ,&quot;Email&quot;),&quot;EMA&quot;,IF(CONTAINS( Product_Name__c ,&quot;Maps&quot;),&quot;MAP&quot;,IF(CONTAINS( Product_Name__c ,&quot;Retarget&quot;),&quot;DIS&quot;,IF(CONTAINS( Product_Name__c ,&quot;Facebook&quot;),&quot;SOC&quot;,IF(CONTAINS( Product_Name__c ,&quot;PPC&quot;),&quot;PPC&quot;,&quot;OTHER&quot;)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CurrentValue__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Record_Type_Name__c)),Record_Type_Name__c == &apos;USCP Opportunity&apos;), TotalPrice + (TotalPrice * Mgmt_Fee_Percent__c), ( Quantity * UnitPrice )+ HTML_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Product Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>PricebookEntry.Product2.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_OriginalValue__c</fullName>
        <label>Original Product Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_PorC_Date__c</fullName>
        <description>Populates Based on most recent status move into a qualified Status type</description>
        <label>Product P or C Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Awaiting_Onboard_to_today__c</fullName>
        <formula>IF(DATEVALUE(Project_Start_Date__c) &lt;&gt; TODAY(),
  /* If TRUE */
     IF(AND((CASE(MOD(Today() - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)+ CASE(MOD(DATEVALUE(Project_Start_Date__c) - DATE(1985, 1, 5), 7), 0, 0, 1,5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)&gt;5),Today() - DATEVALUE(Project_Start_Date__c) &lt; 6 ),CASE(MOD(Today() - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)+ CASE(MOD(DATEVALUE(Project_Start_Date__c) - DATE(1985, 1, 5), 7), 0, 0, 1,5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)- 6,FLOOR((Today()-(DATEVALUE(Project_Start_Date__c)+ CASE(MOD(DATEVALUE(Project_Start_Date__c) - DATE(1985, 1, 5), 7), 0, 0, 1,6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))/7)*5+CASE(MOD(DATEVALUE(Project_Start_Date__c) - DATE(1985, 1, 5), 7), 0, 0, 1,5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)+CASE(MOD(Today() - DATE(1985, 1, 5), 7), 0, 0, 1, 0,2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)-1),
  /* If FALSE */
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Awaiting Onboard to today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Completion_Time__c</fullName>
        <description>Business days to go live = Live_Date__c - Project__r.D2GL_Start_Time_Stamp__c 
1) Calculate the total number of days between two dates 
2) figure out how many weekend days are between the two dates and subtract them out of the result 
3) Add adjustment for the Floor function error when the days are offset in the week</description>
        <formula>/* First-Order Calculation, subtract the dates */ 
DateValue( Live_Date__c )- DateValue( Project__r.D2GL_Start_Time_Stamp__c  ) 
/* Second-Order calculation, remove the weekends */ 
- (FLOOR((DateValue(Live_Date__c)- DateValue(Project__r.D2GL_Start_Time_Stamp__c))/7)*2) 
/* Third-order calculation, adjust for rounding errors based on days of week */ 
- IF((MOD( DateValue(Project__r.D2GL_Start_Time_Stamp__c)- DATE(2000,1,2),7) = 6 
&amp;&amp; MOD( DateValue(Live_Date__c) - DATE(2000,1,2),7) != 6) 
||(MOD( DateValue(Project__r.D2GL_Start_Time_Stamp__c)- DATE(2000,1,2),7) != 6 
&amp;&amp; MOD( DateValue(Live_Date__c) - DATE(2000,1,2),7) = 6), 1, 
IF(MOD(DateValue(Project__r.D2GL_Start_Time_Stamp__c)- DATE(2000,1,2),7) 
&gt; MOD(DateValue(Live_Date__c) - DATE(2000,1,2),7), 2, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Closed Won To Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Fulfill_Time__c</fullName>
        <formula>IF(NOT(ISBLANK(Live_Date__c)), 

/* If TRUE */ 
IF( 
/* Is same business week? */ 
AND( 
(CASE(MOD(DATEVALUE(Live_Date__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD( Project_In_Fulfill_Date__c  - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
&gt;5), 
DATEVALUE(Live_Date__c) - Project_In_Fulfill_Date__c  &lt; 6 ), 
/* Then work out the number of business days with this formula */ CASE(MOD(DATEVALUE(Live_Date__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
+ CASE(MOD(Project_In_Fulfill_Date__c  - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
- 6, 
/* Otherwise use this formula */ 
FLOOR( 
(DATEVALUE(Live_Date__c) 
-(Project_In_Fulfill_Date__c  
+ CASE(MOD(Project_In_Fulfill_Date__c   - DATE(1985, 1, 5), 7), 0, 0, 1, 
6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) 
)/7)*5 
+CASE(MOD(Project_In_Fulfill_Date__c  - DATE(1985, 1, 5), 7), 0, 0, 1, 
5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0) 
+CASE(MOD(DATEVALUE(Live_Date__c) - DATE(1985, 1, 5), 7), 0, 0, 1, 0, 
2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0) 
-1), 

/* If FALSE */ 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project InFulfill To Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_In_Fulfill_Date__c</fullName>
        <formula>DATEVALUE(Project__r.In_Fulfillment_Stamp__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project In Fulfill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_In_Pipe_Time__c</fullName>
        <description>Calculates the number of business days between the Project Start Date and the Live Date. The Project Start Date should come after the Live Date. If the Project Start Date is before the LIve Date, the value is zero.</description>
        <formula>IF(DATEVALUE(Project_Start_Date__c)&lt;DATEVALUE(Live_Date__c),0,

/* First-Order Calculation, subtract the dates */
DateValue(Project_Start_Date__c)- DateValue(Live_Date__c)
/* Second-Order calculation, remove the weekends */
- (FLOOR(( DateValue(Project_Start_Date__c)- DateValue(Live_Date__c))/7)*2)
/* Third-order calculation, adjust for rounding errors based on days of week */
- IF((MOD( DateValue(Live_Date__c)          - DATE(2000,1,2),7) = 6
   &amp;&amp; MOD( DateValue(Project_Start_Date__c) - DATE(2000,1,2),7) != 6)
|| (MOD( DateValue(Live_Date__c)-             DATE(2000,1,2),7) != 6 
 &amp;&amp; MOD( DateValue(Project_Start_Date__c) - DATE(2000,1,2),7) = 6), 1,
IF(MOD(DateValue(Live_Date__c)- DATE(2000,1,2),7) &gt; MOD( DateValue(Project_Start_Date__c) - DATE(2000,1,2),7), 2, 0)) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Awaiting OnBoard To Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Initiation_Date__c</fullName>
        <description>Date Opp Went Won</description>
        <formula>Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <formula>Opportunity.DAMAssigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Story_Review_Needed__c</fullName>
        <formula>IF(
OR(
DATEVALUE(Opportunity.DAMAssigned__c)&lt; Opportunity.CloseDate,

IF
(
(
DaysInStatus_Awaiting_OnBoard__c+ 
DaysInStatus_WaitingResource__c+ 
DaysInStatus_WaitingApproval__c+ 
DaysInStatus_Pending__c+ 
DaysInStatus_InFulfillment__c
)
&gt; Project_Completion_Time__c,True,False)
)
,&quot;Review&quot;,&quot;Good&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Story - Review Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Product__c</fullName>
        <formula>Opportunity.Sales_Rep__r.Account.Name + &quot; -  &quot; +  Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_ContractMonths__c</fullName>
        <label>Number of Contract Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_LineItems__c</fullName>
        <label>Number of Line Items</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROP_Height__c</fullName>
        <label>ROP Height (Inch)</label>
        <picklist>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROP_Section__c</fullName>
        <label>ROP Section</label>
        <picklist>
            <picklistValues>
                <fullName>MAIN NEWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPORTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ LIVING (Monday, Tuesday &amp; Sundays)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ Living – FOOD &amp; DRINK (WEDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ LIVING – THINGS TO DO (THURS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ LIVING – HEALTH &amp; WELLNESS (FRIDAY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ LIVING – EXPLORE AZ (SATURDAY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ROP_Visual__c</fullName>
        <label>ROP Visual</label>
        <picklist>
            <picklistValues>
                <fullName>BL&amp;WT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROP__c</fullName>
        <label>ROP Columns</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Opportunity Record type Name</description>
        <label>Record Type Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceID_OriginalNewSell__c</fullName>
        <label>Original NewSell OLI ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case_Result__c</fullName>
        <formula>TEXT(Related_Case__r.GL_Rate_Exception_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Case - Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <formula>IF(PricebookEntry.Product2.Renewable__c = True, &quot;Renewable&quot; , &quot;Non-Renewable&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalText__c</fullName>
        <formula>if( Opportunity.IsRenewed__c = True, &quot;Renewed&quot;, &quot;Fulfilled&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RenewalText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplicationOLI_SourceID__c</fullName>
        <description>OLI ID for the OLI from which this one was replicated</description>
        <label>Originating OLI ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplicationOLI_TargetID__c</fullName>
        <description>The OLI to which this OLI was replicated</description>
        <label>Replicated OLI ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Met__c</fullName>
        <formula>IF(PricebookEntry.Product2.SLA_Bus_Days__c = 0,1,
IF(DaysInStatus_InFulfillment2__c &lt;= SLA__c,1,
0
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Product_Type__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.SLA_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <formula>IF(Product_Name__c=&quot;Email Blast&quot;,8,PricebookEntry.Product2.SLA_Bus_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Type__c</fullName>
        <label>Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrossSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <formula>Live_Date__c + ((Quantity + 1) * 28)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_Amt__c</fullName>
        <label>Setup Fee Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by a workflow rule/field update. Must be a field on the OLI to enable an Roll-Up formula. Roll-Up formulas can&apos;t use other formula fields so, this field is needed for the &quot;Opportunities missing setup fees&quot; report</description>
        <label>Setup Fee Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Setup Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_Notice__c</fullName>
        <formula>IF(PricebookEntry.Product2.Social_Media_Notice__c = True,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Media Notice</label>
        <type>Text</type>
    </fields>
</CustomObject>